# EMGTCN

./: config.yaml  pyproject.toml  requirements.txt
src/: augmentations.py  create_dataset.py  dataset.py  model.py
